# m365-copilot-client

./: .gitignore  README.md  api.py  chat.html  gettoken.py  pyproject.toml  requirements.txt
chat/: package.json
m365-chat/: package-lock.json  package.json
m365-chat/public/: index.html
m365-chat/src/: server.js
m365_copilot/: __init__.py  auth.py  cli.py  session.py  signalr.py
